--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "4.2.*"
-	},
+	},"require-dev": {
+            "way/generators": "~2.0"
+        },
 	"autoload": {
 		"classmap": [
 			"app/commands",
